--- a/pkg/grub/rootfs.cfg
+++ b/pkg/grub/rootfs.cfg
@@ -171,7 +171,7 @@ function set_generic {
 
    set_global dom0 /boot/kernel
    set_global dom0_rootfs "root=$rootfs_root"
-   set_global dom0_cmdline "$linuxkit_cmdline $panic_timeout rfkill.default_state=0 split_lock_detect=off"
+   set_global dom0_cmdline "$linuxkit_cmdline $panic_timeout rfkill.default_state=0 split_lock_detect=off log_buf_len=2M"
 }
 
 function set_x86_64 {
